--- a/app/src/main/res/layout-land/activity_forgot_password.xml
+++ b/app/src/main/res/layout-land/activity_forgot_password.xml
@@ -10,21 +10,16 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/logo"
-        android:layout_width="160dp"
-        android:layout_height="151dp"
-        android:layout_marginStart="125dp"
-        android:layout_marginLeft="125dp"
-        android:layout_marginTop="106dp"
-        android:layout_marginEnd="126dp"
-        android:layout_marginRight="126dp"
-        android:layout_marginBottom="80dp"
+        android:layout_width="120dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="31dp"
+        android:layout_marginBottom="25dp"
         android:src="@drawable/trimmed_citypretty_logo"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/loginEmail"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.833"
         app:srcCompat="@drawable/trimmed_citypretty_logo" />
 
     <!-- <ImageView
@@ -47,13 +42,8 @@
     <TextView
         android:id="@+id/enterEmailTextView"
         android:layout_width="215dp"
-        android:layout_height="39dp"
-        android:layout_marginStart="98dp"
-        android:layout_marginLeft="98dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="99dp"
-        android:layout_marginRight="99dp"
-        android:layout_marginBottom="30dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="14dp"
         android:gravity="center"
         android:text="Please enter your email."
         android:textSize="16dp"
@@ -66,36 +56,25 @@
         android:id="@+id/emailReset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="99dp"
-        android:layout_marginLeft="99dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="99dp"
-        android:layout_marginRight="99dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/colorBlack"
         android:ems="10"
         android:hint="Email"
-        android:backgroundTint="@color/colorBlack"
         android:inputType="textEmailAddress"
         android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/sendEmailButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/enterEmailTextView"
         app:layout_constraintTop_toBottomOf="@+id/enterEmailTextView" />
 
     <Button
         android:id="@+id/sendEmailButton"
-        android:layout_width="251dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginRight="80dp"
-        android:layout_marginBottom="173dp"
+        android:layout_width="450dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="19dp"
         android:background="@drawable/round_button"
         android:text="Send Email"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/rememberedPass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailReset" />
@@ -103,13 +82,7 @@
     <TextView
         android:id="@+id/textView2"
         android:layout_width="238dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="93dp"
-        android:layout_marginRight="93dp"
-        android:layout_marginBottom="8dp"
+        android:layout_height="0dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:text="Reset Password"
@@ -123,15 +96,10 @@
     <TextView
         android:id="@+id/rememberedPass"
         android:layout_width="177dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="117dp"
-        android:layout_marginLeft="117dp"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginRight="117dp"
-        android:layout_marginBottom="109dp"
-        android:text="Remember your password?"
+        android:layout_height="0dp"
+        android:layout_marginBottom="29dp"
         android:clickable="true"
+        android:text="Remember your password?"
         android:textColor="@drawable/click_color"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
