--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -31,14 +31,13 @@
     <!--CityPretty Logo made it -->
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/circleImageView"
-        android:layout_width="160dp"
-        android:layout_height="151dp"
-        android:layout_marginStart="125dp"
-        android:layout_marginLeft="125dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="126dp"
-        android:layout_marginRight="126dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="72dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="319dp"
+        android:layout_marginLeft="319dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="319dp"
+        android:layout_marginRight="319dp"
         android:src="@drawable/trimmed_citypretty_logo"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -48,17 +47,16 @@
 
     <EditText
         android:id="@+id/loginEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="99dp"
-        android:layout_marginLeft="99dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="99dp"
-        android:layout_marginRight="99dp"
+        android:layout_width="378dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="176dp"
+        android:layout_marginLeft="176dp"
+        android:layout_marginEnd="177dp"
+        android:layout_marginRight="177dp"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/colorBlack"
         android:ems="10"
         android:hint="Email"
-        android:backgroundTint="@color/colorBlack"
         android:inputType="textEmailAddress"
         android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/loginPassword"
@@ -68,17 +66,16 @@
 
     <EditText
         android:id="@+id/loginPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="99dp"
-        android:layout_marginLeft="99dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="99dp"
-        android:layout_marginRight="99dp"
+        android:layout_width="377dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="176dp"
+        android:layout_marginLeft="176dp"
+        android:layout_marginEnd="178dp"
+        android:layout_marginRight="178dp"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/colorBlack"
         android:ems="10"
         android:hint="Password"
-        android:backgroundTint="@color/colorBlack"
         android:inputType="textPassword"
         android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
@@ -88,14 +85,13 @@
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="271dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="67dp"
-        android:layout_marginLeft="67dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="73dp"
-        android:layout_marginRight="73dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="480dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="126dp"
+        android:layout_marginLeft="126dp"
+        android:layout_marginEnd="125dp"
+        android:layout_marginRight="125dp"
+        android:layout_marginBottom="6dp"
         android:background="@drawable/round_button"
         android:radius="50dp"
         android:text="Sign in"
@@ -108,14 +104,13 @@
 
     <Button
         android:id="@+id/loginRegisterButton"
-        android:layout_width="269dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="69dp"
-        android:layout_marginLeft="69dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="73dp"
-        android:layout_marginRight="73dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="484dp"
+        android:layout_height="34dp"
+        android:layout_marginStart="126dp"
+        android:layout_marginLeft="126dp"
+        android:layout_marginEnd="126dp"
+        android:layout_marginRight="126dp"
+        android:layout_marginBottom="7dp"
         android:background="@drawable/round_button"
         android:text="Create Account"
         android:textColor="@android:color/white"
@@ -126,16 +121,16 @@
 
     <TextView
         android:id="@+id/loginForgotPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:layout_marginStart="148dp"
-        android:layout_marginLeft="148dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginRight="148dp"
-        android:layout_marginBottom="32dp"
-        android:text="Forgot Password?"
+        android:layout_width="126dp"
+        android:layout_height="18dp"
+        android:layout_marginStart="308dp"
+        android:layout_marginLeft="308dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="308dp"
+        android:layout_marginRight="308dp"
+        android:layout_marginBottom="28dp"
         android:clickable="true"
+        android:text="Forgot Password?"
         android:textColor="@drawable/click_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -144,36 +139,34 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="238dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="87dp"
-        android:layout_marginLeft="87dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="86dp"
-        android:layout_marginRight="86dp"
+        android:layout_width="67dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="332dp"
+        android:layout_marginLeft="332dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="332dp"
+        android:layout_marginRight="332dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:text="Login"
         android:textColor="@color/colorBlack"
-        android:textSize="26dp"
+        android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/loginEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/circleImageView"
-        app:layout_constraintVertical_chainStyle="spread_inside" />
+        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="195dp"
-        android:layout_marginLeft="195dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="196dp"
-        android:layout_marginRight="196dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="355dp"
+        android:layout_marginLeft="355dp"
+        android:layout_marginEnd="356dp"
+        android:layout_marginRight="356dp"
+        android:layout_marginBottom="7dp"
         android:text="OR"
         android:textColor="@android:color/white"
         android:textSize="16dp"
