--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlack">#000000</color>
-
+    <color name="white">#FFFFFF</color>
+    <color name="activityBackground">#f4f4f4</color>
+    <color name="colorGrey">#979da8</color>
 </resources>
