--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#FFFFFF</color>
     <color name="activityBackground">#f4f4f4</color>
     <color name="colorGrey">#979da8</color>
+    <color name="colorCream">#f2f3f4</color>
 </resources>
