Last Minute Changes

--- a/app/src/main/res/layout/beauticiansidelist.xml
+++ b/app/src/main/res/layout/beauticiansidelist.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
 
 
     <LinearLayout
@@ -79,13 +82,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Accept" />
+            android:background="@drawable/round_button"
+            android:text="Accept"
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/deny"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/round_button"
+            android:textColor="@color/white"
             android:text="Deny" />
 
     </LinearLayout>
