--- a/app/src/main/res/layout/activity_pay_pal.xml
+++ b/app/src/main/res/layout/activity_pay_pal.xml
@@ -33,6 +33,8 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="60dp"
+            android:background="@drawable/round_button"
+            android:textColor="@android:color/white"
             android:text="View Cart"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -46,6 +48,8 @@
             android:layout_marginTop="68dp"
             android:layout_marginEnd="60dp"
             android:layout_marginRight="60dp"
+            android:background="@drawable/round_button"
+            android:textColor="@android:color/white"
             android:text="Add to Cart"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
@@ -58,6 +62,8 @@
             android:layout_marginTop="56dp"
             android:layout_marginEnd="60dp"
             android:layout_marginRight="60dp"
+            android:background="@drawable/round_button"
+            android:textColor="@android:color/white"
             android:text="Add to Cart"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
@@ -70,6 +76,8 @@
             android:layout_marginTop="48dp"
             android:layout_marginEnd="60dp"
             android:layout_marginRight="60dp"
+            android:background="@drawable/round_button"
+            android:textColor="@android:color/white"
             android:text="Add to Cart"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
@@ -83,6 +91,8 @@
             android:layout_marginTop="40dp"
             android:layout_marginEnd="60dp"
             android:layout_marginRight="60dp"
+            android:background="@drawable/round_button"
+            android:textColor="@android:color/white"
             android:text="Add to Cart"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
